/*
 * $Id: ChangeLog,v 1.2560 2004/03/11 22:03:21 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-12 15:40 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/debug/debugger.prg
  * source/debug/dbgtwin.prg
  * source/vm/hvm.c
    ! Synced with latest Harbour debugger fixes by Ryszard Glab (which fix
      procedure callstack and debugger activation issues when modules with
      and without debug info are linked together).

2004-03-11 14:10 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/filesys.c
    ! Fixed NON X__WIN32__ branch under HB_OS_WIN_32 of hb_fsCommit() to use _commit()
      instead of FlushFileBuffers()

    /* Compilation tested under MSVC and BCC - please test and revise others as needed. */

2004-03-11 21:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/transfrm.c
    ! remove recent hack, it is very destructive :-(

2004-03-11 20:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/transfrm.c
    ! add hacks to handle conversion of string/numbers to numeric formats
      whereby the format length is less than the length of the value.

2004-03-11 11:00 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * source/rtl/makefile
    ! added fparse.c

2004-03-11 09:16 UTC+0100 Patrick Mast <patrick@xHarbour.com>
  * dox/whatsnew.txt
    + Added 1st What's new for 0.93 ( text from Andi Jahja )

2004-03-10 20:29 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapigt.h
    + Added extern void hb_inkeyExit( void )
  * source/rtl/inkey.c
    + Added logic to LOCK/UNLOCK static variables holding BLOCK values.
    + Added void hb_inkeyExit( void ) to UNLOCL and release BLOCK values in static variables.
    % Cleanup of redundant code.

  * source/vm/hvm.c
    + Added call to hb_inkeyExit() in hb_vmQuit()
